k3s/deployment.yaml
#
# kubectl apply -k .
#
# The Images are  about 200M [2].  The php-fpm image  does not seem to
# bring a proxy and  does not speak http on its  port 9000. The Apache
# image ist called "legacy" OTOH. It does serve content though.
#
# When going through the installation specify "root" as the MySQL root
# password and "idoit-db" as the  hostname for the MySQL server. Cross
# check below if these comment get out of date.
#
# It is unclear if it makes any  sense to put that data into a volume.
# What of that ist supposed to be persistent state?
#
#   Each  i-doit  container  has  one default  volume  containing  the
#   complete  installation  directory: /var/www/html.  This  directory
#   includes the  source code, cache files,  uploaded files, installed
#   add-ons, custom translation files, etc.
#
# There seem to be a generated config.php, maybe more ...
#
# [1] https://github.com/bheisig/i-doit-docker
# [2] https://hub.docker.com/r/bheisig/idoit
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idoit-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: idoit-server
  template:
    metadata:
      labels:
        component: idoit-server
    spec:
      # Volumes used by some or all containers of the Pod:
      volumes:
      - name: "idoit-data"
        persistentVolumeClaim:
          claimName: "idoit-data"
      containers:
      - name: idoit-server
        # docker run --name i-doit-apache -p 80:80 bheisig/idoit:1.15-open-php7.4-apache
        image: bheisig/idoit:1.15-open-php7.4-apache
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        # The simplest way to persist data between container
        # starts/upgrades is to utilize named volumes [2]:
        volumeMounts:
        - mountPath: "/unused-idoit-data"
          name: "idoit-data"
---
apiVersion: v1
kind: Service
metadata:
  name: idoit-server
spec:
  type: ClusterIP
  selector:
    component: idoit-server
  ports:
  - port: 80
    targetPort: 80
---
#
# We  assume here  that  *.localhost resolves  to  the local  machine.
# Following URL should be directed to corresponding Service, also with
# https:// protocoll:
#
#     http://idoit.localhost
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: idoit
spec:
  rules:
  - host: idoit.localhost
    http:
      paths:
      - backend:
          serviceName: idoit-server
          servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idoit-db
spec:
  replicas: 1
  selector:
    matchLabels:
      component: idoit-db
  # Strategy  =  Recreate  instructs  Kubernetes to  not  use  rolling
  # updates.  Rolling updates  will not work, as you  cannot have more
  # than one  Pod running at a  time. The Recreate strategy  will stop
  # the  first  pod  before  creating  a  new  one  with  the  updated
  # configuration.
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: idoit-db
    spec:
      # Volumes used by some or all containers of the Pod:
      volumes:
      - name: "idoit-db"
        persistentVolumeClaim:
          claimName: "idoit-db"
      containers:
        # docker run --name some-mysql -e
        # MYSQL_ROOT_PASSWORD=my-secret-pw -d mysql:tag
        #
        # FIXME: Doeas it still hold? With v8.0 it my happen thata the
        # older clients cannot connect  because of the changed default
        # by password  hash algo.  Use  v5.7.  The CentOS  based idoit
        # server container image brings an older mysqladmin and likely
        # other tools.
        #
      - name: idoit-db
        image: mysql:5.7.32
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: "idoit-db"
---
apiVersion: v1
kind: Service
metadata:
  name: idoit-db
spec:
  type: ClusterIP
  selector:
    component: idoit-db
  ports:
  - port: 3306
    targetPort: 3306
